XeroCallout and XeroOrchestrator Updated Logic

--- a/force-app/main/default/classes/XeroCallout.cls
+++ b/force-app/main/default/classes/XeroCallout.cls
@@ -1,16 +1,4 @@
 public with sharing class XeroCallout {
-    public static HttpRequest constructRequest(String method, String resource,String scope){
-        HttpRequest request = new HttpRequest();
-        
-        request.setMethod(method);
-        request.setEndpoint('callout:XeroCredentials/'+resource);
-		request.setTimeout(120000);
-        
-        if(scope != null) request.setHeader('scope', 'accounting.'+scope);
-        
-        return request;
-    }
-    
     public static String createResponse(Object data,String err,Integer status){
         Map<String,Object> responseMap = new Map<String,Object>();
         responseMap.put('data', data);
@@ -21,19 +9,22 @@ public with sharing class XeroCallout {
     }
 
     public static String getTenantId(String scope){
-        HttpRequest request = constructRequest('GET','connections',scope);
+        HttpRequest request = new HttpRequest();
+        
+        request.setMethod('GET');
+        request.setEndpoint('callout:XeroCredentials/connections');
+		request.setHeader('scope', 'accounting.'+scope);
+        request.setTimeout(120000);
         
         try{
         	HttpResponse response = new Http().send(request);
-        
+            
         	List<Object> result =  (List<Object>) JSON.deserializeUntyped(response.getBody());
-        
+            Map<String,Object> tempMap = new Map<String,Object>();
+
      		for(Object obj : result) { 
-	    		Map<String,Object> tempMap = (Map<String,Object>)obj; 
-    			for(String key : tempMap.keyset()) { 
-        			if(key == 'tenantId')
-        				return (String)tempMap.get(key); 
-    			} 
+	    		tempMap = (Map<String,Object>)obj; 
+    			return (String)tempMap.get('tenantId'); 
 			} 
             return '0';
         }
@@ -43,15 +34,7 @@ public with sharing class XeroCallout {
         }
     }
     
-    public static String getXeroData(String method,String resource,String tenantId){
-        
-        String resourceToBeSent = 'api.xro/2.0/'+resource;
-        
-        HttpRequest request = constructRequest(method,resourceToBeSent,null);
-        request.setHeader('Accept', 'application/json');
-        request.setHeader('xero-tenant-id', tenantId);
-
-        
+    public static String getXeroData(HttpRequest request,String resource){
         try{
             HttpResponse response = new Http().send(request);
             
@@ -72,20 +55,3 @@ public with sharing class XeroCallout {
 
     class XeroException extends Exception{}
 }
-
-
-
-
-/*
-Map<String,Object> response = new Map<String,Object>();
-response.put('Data','Data');
-response.put('ErrorMessage',null);
-response.put('Status',400);
-
-System.debug(response);
-
-Object responseObj = JSON.serialize(response);
-
-System.debug(responseObj);
-
-*/
