--- a/force-app/main/default/classes/XeroCallout.cls
+++ b/force-app/main/default/classes/XeroCallout.cls
@@ -19,13 +19,19 @@ public with sharing class XeroCallout {
         try{
         	HttpResponse response = new Http().send(request);
             
-        	List<Object> result =  (List<Object>) JSON.deserializeUntyped(response.getBody());
-            Map<String,Object> tempMap = new Map<String,Object>();
+            if(response.getStatusCode() != 200){
+                System.debug(response);
+                throw new XeroException('Tenant Id Not returned!');
+            }
+            else{
+                List<Object> result =  (List<Object>) JSON.deserializeUntyped(response.getBody());
+                Map<String,Object> tempMap = new Map<String,Object>();
 
-     		for(Object obj : result) { 
-	    		tempMap = (Map<String,Object>)obj; 
-    			return (String)tempMap.get('tenantId'); 
-			} 
+     		    for(Object obj : result) { 
+	    		    tempMap = (Map<String,Object>)obj; 
+    			    return (String)tempMap.get('tenantId'); 
+			    }
+            } 
             return '0';
         }
         catch(Exception ex){
@@ -38,12 +44,13 @@ public with sharing class XeroCallout {
         try{
             HttpResponse response = new Http().send(request);
             
-            Map<String,Object> responseMap = (Map<String,Object>)JSON.deserializeUntyped(response.getBody());
+            Map<String,Object> responseMap = new Map<String,Object>();
             
             if(response.getStatusCode() != 200){
-                throw new XeroException();
+                throw new XeroException('Status Code '+response.getStatusCode()+' Error Occured! '+response.getBody());
             }
             else{
+                responseMap = (Map<String,Object>)JSON.deserializeUntyped(response.getBody());
                 return createResponse(responseMap.get(resource),null,200);
             }
         }
