--- a/force-app/main/default/classes/XeroCallout.cls
+++ b/force-app/main/default/classes/XeroCallout.cls
@@ -1,10 +1,14 @@
+//Actual callout method
 public with sharing class XeroCallout {
+    //Method to send request and return the response to the orchestrator
     public static String getXeroData(HttpRequest request,String resource){
         try{
+            //Send request
             HttpResponse response = new Http().send(request);
             
             Map<String,Object> responseMap = new Map<String,Object>();
             
+            //Check if response was successful else, throw an error.
             if(response.getStatusCode() != 200){
                 throw new XeroException('Status Code '+response.getStatusCode()+' Error Occured! '+response.getBody());
             }
@@ -17,8 +21,10 @@ public with sharing class XeroCallout {
             System.debug('An Error Occurred! '+ex.getMessage());
             return createResponse(null,ex.getMessage(),400);
         }
+        //Return the response at the end.
     }
 
+    //Method to create a response object and sending it back to orchestrator
     public static String createResponse(Object data,String err,Integer status){
         Map<String,Object> responseMap = new Map<String,Object>();
         responseMap.put('data', data);
@@ -28,22 +34,28 @@ public with sharing class XeroCallout {
         return (String)JSON.serialize(responseMap);
     }
 
+    //Method to get tenant Id - Which accepts scope
+    //Tenant Id is dependant of scope, meaning, depending on scope, tenant id will change. 
+    //Tenant Id is mandetory for fetching
+    //We cannot fetch Invoices with tenant Id which was fetched with the scope as Contacts
     public static String getTenantId(String scope){
         HttpRequest request = new HttpRequest();
-        
+        //Construct the request
         request.setMethod('GET');
         request.setEndpoint('callout:XeroCredentials/connections');
 		request.setHeader('scope', 'accounting.'+scope);
         request.setTimeout(120000);
         
+        //Send the request, store the response
         try{
         	HttpResponse response = new Http().send(request);
-            
+            //Check weather the response was successful.
             if(response.getStatusCode() != 200){
                 System.debug(response);
                 throw new XeroException('Tenant Id Not returned!');
             }
             else{
+                //Deserialize the response and return the tenant id value.
                 List<Object> result =  (List<Object>) JSON.deserializeUntyped(response.getBody());
                 Map<String,Object> tempMap = new Map<String,Object>();
 
@@ -51,14 +63,16 @@ public with sharing class XeroCallout {
 	    		    tempMap = (Map<String,Object>)obj; 
     			    return (String)tempMap.get('tenantId'); 
 			    }
-            } 
+            }
+            //'0' will be returned if response was returned but tenant id was not found.
             return '0';
         }
         catch(Exception ex){
+            //Exception will be thrown and again '0' will be returned if there was any error
          	System.debug('Error ' + ex.getMessage());
             return '0';
         }
     }
-
+    //Custom exception to print custom error messages.
     class XeroException extends Exception{}
 }
