sendToXero Method created

--- a/force-app/main/default/classes/XeroOrchestrator.cls
+++ b/force-app/main/default/classes/XeroOrchestrator.cls
@@ -4,13 +4,17 @@ public with sharing class XeroOrchestrator {
     public static String tenantId = '';
 
     //Method to construct 
-    public static HttpRequest constructRequest(String method, String resource,String tenantId){
+    public static HttpRequest constructRequest(String method, String resource,String tenantId, String requestBody){
         
-        RequestResponseProcessor.RequestResponseLogger req = RequestResponseProcessor.getLogger(XeroOrchestrator.class);
-        req.debug('constructRequest method starts','constructRequest');
+      BlueLogProcessor.IBlueLogger ibl = BlueLogProcessor.getLogger(XeroOrchestrator.class);
+        ibl.debug('constructRequest method starts','constructRequest');
         
       HttpRequest request = new HttpRequest();
       //Construct the request - setting the parameters.
+      if(requestBody != null)
+      {         
+          request.setbody(requestBody);
+      }
       request.setMethod(method);
       request.setEndpoint('callout:XeroCredentials/api.xro/2.0/'+resource);
       request.setTimeout(120000);
@@ -18,28 +22,37 @@ public with sharing class XeroOrchestrator {
       request.setHeader('xero-tenant-id', tenantId);
       //return the request for further processing.
       
-      req.debug('constructRequest method ends','constructRequest');
+      ibl.debug('constructRequest method ends','constructRequest');
+      BlueLogProcessor.getInstance().forceFlush();
       return request;
     }
     
-    public static Boolean checkForPermission(){  
+    public static Boolean checkForPermission(String requiredPermission){  
       //Getting logged in user details 
-      User u = [SELECT Id, username,Name 
+      User userRecord = [SELECT Id, username,Name 
                 FROM User 
                 WHERE Id = :UserInfo.getUserId()];
 
       //Variable assignment - Permission Set Names
-      String readPermission = 'Xero_Integration_Read';
-      String editPermission = 'Xero_Integration_Edit';
+      String permission = '';
+        if(requiredPermission == 'Read')
+            permission = 'Xero_Integration_Read';
+        else
+      		 permission = 'Xero_Integration_Edit';
 
       //Getting permission set Ids. 
       //Getting permission set details in a set.
-      Set<String> permissions = new Set<String>{[SELECT Id FROM PermissionSet WHERE Name =:readPermission].Id,[SELECT Id FROM PermissionSet WHERE Name =:editPermission].Id};
+      List<PermissionSet> permissionSets = [SELECT Id FROM PermissionSet WHERE Name = :permission];
+
+      Set<String> permissions = new Set<String>{};
+      permissions.add(permissionSets[0].Id);
+      permissions.add(permissionSets[1].Id);
       
 		  try{
         //If query returns something, which means user has permission set assigned. Return true in that case.
-			  PermissionSetAssignment pId = [SELECT Id FROM PermissionSetAssignment WHERE AssigneeId =: u.Id AND PermissionSetId IN :permissions];
-			  return true;
+			  List<PermissionSetAssignment> permissionSetIds = [SELECT Id FROM PermissionSetAssignment WHERE AssigneeId =: userRecord.Id AND PermissionSetId IN :permissions];
+        
+        return permissionSetIds.size() != 0 ? true : false;
 		  }
 		  catch(QueryException ex){
         //else the flow moves into the exception and returns false.
@@ -48,30 +61,34 @@ public with sharing class XeroOrchestrator {
     }
     
     //Method of orchestration.
-    public static String connectToXero(String resource){
-        
+    public static String connectToXero(String resource,String filter){
       BlueLogProcessor.IBlueLogger ibl = BlueLogProcessor.getLogger(XeroOrchestrator.class);
-	  ibl.debug('connectToXero method start', 'connectToXero');
-        
       //Check if user has permission
-      if(checkForPermission()){
+      if(checkForPermission('Read')){
         //Fetch Tenant Id
         String tenantId = XeroCallout.getTenantId(resource);
           //Check if tenant id is returned, return and print an error instead.
           if(tenantId != '0'){
+              String resoourceTobeSent = filter.length() > 0 ? resource+'/'+filter : resource;
               //Construct the request with parameters.
-              HttpRequest request = constructRequest('GET', resource, tenantId);
+              HttpRequest request = constructRequest('GET', resource, tenantId, null);
+              ibl.debug('Request sent to fetch data: '+resource, 'connectToXero');
+              
               //Send request to callout method, deserialize the response and assign it to a variable called data.
               Map<String,Object> data = (Map<String,Object>)JSON.deserializeUntyped(XeroCallout.getXeroData(request,resource)); 
-              ibl.debug('Response recieved : ' +data.get('status'), 'connectToXero');
+                            
               
               //Check weather the response is successful or not, print and return either details.
               if(data.get('status')!= 200){
                 System.debug(data.get('err'));
+                ibl.error('Error Occured:'+data.get('status'), 'connectToXero');
+                BlueLogProcessor.getInstance().forceFlush();
                 return (String)data.get('err');
               }
               else{
                 System.debug(data.get('data'));
+                ibl.debug('Received Data Successfully:'+data.get('status'), 'connectToXero');
+                BlueLogProcessor.getInstance().forceFlush();
                 return 'Data Present';
               }
           }
@@ -82,9 +99,38 @@ public with sharing class XeroOrchestrator {
       }
       else{
         System.debug('User does not have sufficiant access!');
+        ibl.debug('User does not have sufficiant access!', 'connectToXero');
+        BlueLogProcessor.getInstance().forceFlush();
         return 'User does not have sufficiant access!';
       }
     }
+    
+    public static ContactWrapper sendToXero(ContactWrapper contct){
+      String tenantId = XeroCallout.getTenantId(resource);
+      if(tenantId != '0'){
+          //Construct the request with parameters.
+          String resource = 'Contact';
+          String serializedData = JSON.serialize(contct);
+          HttpRequest request = constructRequest('POST', resource, tenantId, serializedData);
+ 
+          //Send request to callout method, deserialize the response and assign it to a variable called data.
+          Map<String,Object> data = (Map<String,Object>)JSON.deserializeUntyped(XeroCallout.getXeroData(request,resource)); 
+          /*
+          //Check weather the response is successful or not, print and return either details.
+          if(data.get('status')!= 200){
+            System.debug(data.get('err'));
+            return (String)data.get('err');
+          }
+          else{
+            System.debug(data.get('data')); 
+            return 'Data Present';
+          } */
+      }
+      else{
+        System.debug('There was some problem in retriving the Tenant Id');
+        return 'There was some problem in retriving the Tenant Id';
+      }
+    } 
 }
 
 
